--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   # Utils
   intl: 0.20.2
   showcaseview: ^4.0.1
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
